--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/LucasAmaralPires/Freechains-Node#readme",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "readline-sync": "^1.4.10"
   }
 }
